Yangi plagin yaratdim

--- a/themes/art-fakult/partials/header-meta.htm
+++ b/themes/art-fakult/partials/header-meta.htm
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-	<title>Home Two || Museum || Responsive HTML 5 Template</title>
+	<title>{{"CHDPU - Tasviriy sa'nat kafedrasi web sayti"|_}}</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
