--- a/themes/art-fakult/partials/main-header.htm
+++ b/themes/art-fakult/partials/main-header.htm
@@ -62,6 +62,13 @@
                                             <li><a href="blog-single.html">Art ishlanmalar</a></li>
                                         </ul>
                                     </li>
+                                     <li class="dropdown"><a href="index-2.html#">Ilmiy Jurnal</a>
+                                        <ul>
+                                            <li><a href="events.html">Jurnal to'plamlari</a></li>
+                                            <li><a href="event-single.html">Arxiv</a></li>
+                                            <li><a href="event-single.html">Maqolalar</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="contact.html">Qayta a'loqa</a></li>
                                 </ul>
                             </div>
@@ -77,7 +84,7 @@
                                     <li>
                                         <form method="post" action="index.html">
                                             <div class="form-group">
-                                                <input type="search" name="search" placeholder="Search Here" required>
+                                                <input type="search" name="search" placeholder="Saydan qidirish" required>
                                                 <button type="submit"><i class="fa fa-search"></i></button>
                                             </div>
                                         </form>
@@ -116,44 +123,52 @@
                     <nav class="main-menu navbar-expand-lg">
                         <div class="navbar-collapse collapse clearfix">
                             <ul class="navigation clearfix">
-                                <li class="dropdown current"><a href="index-2.html#">Home</a>
-                                    <ul>
-                                        <li><a href="index.html">Home Page 01</a></li>
-                                        <li><a href="index-2.html">Home Page 02</a></li>
-                                        <li><a href="index-3.html">Home Page 03</a></li>
-                                        <li><a href="index-4.html">Home Page 04</a></li>
-                                        <li class="dropdown"><a href="index-2.html#">Header Styles</a>
-                                            <ul>
-                                                <li><a href="index.html">Header Style One</a></li>
-                                                <li><a href="index-2.html">Header Style Two</a></li>
-                                                <li><a href="index-3.html">Header Style Three</a></li>
-                                                <li><a href="index-4.html">Header Style Four</a></li>
-                                            </ul>    
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="about.html">About</a></li>
-                                <li class="dropdown"><a href="index-2.html#">Pages</a>
-                                    <ul>
-                                        <li><a href="art.html">Art Design</a></li>
-                                        <li><a href="exhibitions.html">Exhibitions</a></li>
-                                        <li><a href="tickets.html">Buy Tickets</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li class="dropdown"><a href="index-2.html#">Events</a>
-                                    <ul>
-                                        <li><a href="events.html">Our Events</a></li>
-                                        <li><a href="event-single.html">Event Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="index-2.html#">Blog</a>
-                                    <ul>
-                                        <li><a href="blog.html">Latest Blog</a></li>
-                                        <li><a href="blog-single.html">Blog Post</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
+                             <li><a href="{{'/'}}">Bosh sahifa</a></li>
+                                <li class="dropdown current"><a href="index-2.html#">{{"Xabarlar"|_}}</a>
+                                        <ul>
+                                            <li><a href="index.html">Yangiliklar</a></li>
+                                            <li><a href="index-2.html">E'lonlar</a></li>
+                                            <li><a href="index-3.html">Konfrensiyalar</a></li>
+                                            {# <li><a href="index-4.html">Home Page 04</a></li>
+                                            <li class="dropdown"><a href="index-2.html#">Header Styles</a>
+                                                <ul>
+                                                    <li><a href="index.html">Header Style One</a></li>
+                                                    <li><a href="index-2.html">Header Style Two</a></li>
+                                                    <li><a href="index-3.html">Header Style Three</a></li>
+                                                    <li><a href="index-4.html">Header Style Four</a></li>
+                                                </ul>    
+                                            </li> #}
+                                        </ul>
+                                    </li>
+                                <li class="dropdown"><a href="index-2.html#">Kafedra haqida</a>
+                                        <ul>
+                                            <li><a href="art.html">O'qituvchilar</a></li>
+                                            <li><a href="exhibitions.html">O'qitiladigan fanlar</a></li>
+                                            <li><a href="tickets.html">Elektron maqolalar</a></li>
+                                        </ul>
+                                    </li>
+                                    {# <li><a href="gallery.html">Elektron kutubxona</a></li> #}
+                                    <li class="dropdown"><a href="index-2.html#">Kutubxona</a>
+                                        <ul>
+                                            <li><a href="events.html">Elektron resurslar</a></li>
+                                            <li><a href="event-single.html">Kitoblar</a></li>
+                                            <li><a href="event-single.html">Maqolalar</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown"><a href="index-2.html#">Art katalog</a>
+                                    	<ul>
+                                            <li><a href="blog.html">Rassomlar</a></li>
+                                            <li><a href="blog-single.html">Art ishlanmalar</a></li>
+                                        </ul>
+                                    </li>
+                                     <li class="dropdown"><a href="index-2.html#">Ilmiy Jurnal</a>
+                                        <ul>
+                                            <li><a href="events.html">Jurnal to'plamlari</a></li>
+                                            <li><a href="event-single.html">Arxiv</a></li>
+                                            <li><a href="event-single.html">Maqolalar</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="contact.html">Qayta a'loqa</a></li>
                             </ul>
                         </div>
                     </nav><!-- Main Menu End-->
