Yangi o'zgarish menyu va yangi plagin qo'shdim va sozladim

--- a/themes/art-fakult/layouts/asosiy-layout.htm
+++ b/themes/art-fakult/layouts/asosiy-layout.htm
@@ -23,17 +23,17 @@
     {% partial "section-main-slider"%}
 <!--End Main Slider style2-->
 
-<!--Start Contact Info Area-->
-    {% partial "section-content-info" %}
-<!--End Contact Info Area-->
+<!--Start About Style3 Area-->
+    {% partial "section-about-style3" %}
+<!--End About Style3 Area-->
 
-<!--Start About Style1 Area-->
-    {% partial "about-style1-area" %}
-<!--End About Style1 Area-->
+<!--Start Exhibitions Style3 Area-->
+    {% partial "section-exhibitions-style3" %}
+<!--End Exhibitions Style3 Area-->
 
-<!--Start Featured Area-->
-    {% partial "section-featured-area" %}
-<!--End Featured Area-->
+<!--Start Fact Testimonial Area-->
+    {% partial "section-fact-testimonial" %}
+<!--Start Fact Testimonial Area-->
 
 <!--Start Events Style2 Area-->
     {% partial "section-vents-style2-area" %}
