--- a/themes/art-fakult/partials/section-about-style3.htm
+++ b/themes/art-fakult/partials/section-about-style3.htm
@@ -1,30 +1,48 @@
+[builderList]
+modelClass = "RaxiDev\ArtPanel\Models\About"
+scope = "-"
+scopeValue = "{{ :scope }}"
+displayColumn = "big_title"
+noRecordsMessage = "No records found"
+detailsPage = "-"
+detailsUrlParameter = "id"
+recordsPerPage = 1
+pageNumber = "{{ :page }}"
+sortColumn = "created_at"
+sortDirection = "desc"
+==
+{% set records = builderList.records %}
+
+{% for record in records %}
+
+{% if record.is_active == 1 %}
 <section class="about-style3-area" style="margin-top: 15px;">
     <div class="container">
         <div class="row top">
             <div class="col-xl-6">
                 <div class="about-style1-content style3">
                     <div class="sec-title">
-                        <p>Read About our</p>
-                        <div class="big-title"><h1>Institution & Museum</h1></div>
+                        <p>{{ record.small_title }}</p>
+                        <div class="big-title"><h1>{{ record.big_title }}</h1></div>
                     </div>
                     <div class="inner-content">
-                        <h3>Founded in 1965 as an educational institution based in london, The Art & History Museum is committed to producing distinctive  exhibitions and public programming on Asian art.</h3>
+                        <h3>{{ record.about_news|raw }}</h3>
                     </div>    
                 </div>      
             </div>
             <div class="col-xl-6">
                 <div class="about-style1-content right-content style3">
                     <div class="inner-content">
-                        <div class="text">We use our unique collections and unrivalled expertise to tackle the biggest challenges facing the world today. We care for more than 200 thousand exhibits spanning billions of years and welcome more than five million visitors annually.</div>
+                        <div class="text">{{ record.about_kafedra|raw }}</div>
                         <div class="bottom-box">
                             <div class="button">
-                                <a class="btn-one" href="index-4.html#">Learn More</a>    
+                                <a class="btn-one" href="{{ record.button }}">{{ "Ko'proq o'qish"|_ }}</a>    
                             </div>
                             <div class="phone-number">
                                 <div class="icon"><span class="flaticon-phone-1"></span></div>
                                 <div class="title">
-                                    <span>Tell Us:</span>
-                                    <h1><a href="tel:16234569400">1800 123 4659</a></h1>
+                                    <span>{{ "Telefon raqam"|_ }}:</span>
+                                    <h1><a href="tel:{{ record.tell }}">{{ record.tell }}</a></h1>
                                 </div>
                             </div>
                         </div>
@@ -35,3 +53,5 @@
         </div>
     </div>    
 </section>
+{% endif %}
+{% endfor %}
