--- a/themes/art-fakult/partials/section-exhibitions-style3.htm
+++ b/themes/art-fakult/partials/section-exhibitions-style3.htm
@@ -1,70 +1,42 @@
+[builderList]
+modelClass = "RaxiDev\ArtPanel\Models\Xabarlar"
+scope = "-"
+scopeValue = "{{ :scope }}"
+displayColumn = "title"
+noRecordsMessage = "No records found"
+detailsPage = "-"
+detailsUrlParameter = "id"
+recordsPerPage = 6
+pageNumber = "{{ :page }}"
+sortColumn = "created_at"
+sortDirection = "desc"
+==
+{% set records = builderList.records %}
 <section class="exhibitions-style3-area">
     <div class="container">
         <div class="row">
             <div class="col-xl-12">
                 <div class="exhibitions-carousel-style2 owl-carousel owl-theme owl-nav-style-one">
-                    <!--Start Single Exhibition Box Style3-->
-                    <div class="single-exhibition-box-style3">
-                        <div class="img-holder">
-                            <div class="inner">
-                                <img src="{{'assets/images/resources/exhibition-v3-1.jpg'|theme }}" alt="Awesome Image">
-                                <div class="overlay-style-one bg1"></div>
-                            </div>
-                            <div class="text-box">
-                                <span>Exhibition</span>
-                                <h3><a href="index-4.html#">The Museum is Located in St- Germain Castle</a></h3>
-                                <p>From 6 Sept 2017 until 7 Jan 2018</p>    
-                            </div>
-                        </div>    
-                    </div>
-                    <!--End Single Exhibition Box Style3-->
-                    <!--Start Single Exhibition Box Style3-->
-                    <div class="single-exhibition-box-style3">
-                        <div class="img-holder">
-                            <div class="inner">
-                                <img src="{{'assets/images/resources/exhibition-v3-2.jpg'|theme }}" alt="Awesome Image">
-                                <div class="overlay-style-one bg1"></div>
-                            </div>
-                            <div class="text-box">
-                                <span>Exhibition</span>
-                                <h3><a href="index-4.html#">SCI-Arc 2018 Graduate Thesis Presentation</a></h3>
-                                <p>From 6 Sept 2017 until 7 Jan 2018</p>    
-                            </div>
-                        </div>    
-                    </div>
-                    <!--End Single Exhibition Box Style3-->
-                    <!--Start Single Exhibition Box Style3-->
-                    <div class="single-exhibition-box-style3">
-                        <div class="img-holder">
-                            <div class="inner">
-                                <img src="{{'assets/images/resources/exhibition-v3-3.jpg'|theme }}" alt="Awesome Image">
-                                <div class="overlay-style-one bg1"></div>
-                            </div>
-                            <div class="text-box">
-                                <span>Collection</span>
-                                <h3><a href="index-4.html#">Rough Cut: Independent Japanese Antiquity</a></h3>
-                                <p>From 6 Sept 2017 until 7 Jan 2018</p>    
-                            </div>
-                        </div>    
-                    </div>
-                    <!--End Single Exhibition Box Style3-->
-                    <!--Start Single Exhibition Box Style3-->
-                    <div class="single-exhibition-box-style3">
-                        <div class="img-holder">
-                            <div class="inner">
-                                <img src="{{'assets/images/resources/exhibition-v3-1.jpg'|theme }}" alt="Awesome Image">
-                                <div class="overlay-style-one bg1"></div>
-                            </div>
-                            <div class="text-box">
-                                <span>Exhibition</span>
-                                <h3><a href="index-4.html#">The Museum is Located in St- Germain Castle</a></h3>
-                                <p>From 6 Sept 2017 until 7 Jan 2018</p>    
-                            </div>
-                        </div>    
-                    </div>
-                    <!--End Single Exhibition Box Style3-->
-                </div>
-                
+                    {% for record in records %}
+                    {% if record.is_active %}
+                        <!--Start Single Exhibition Box Style3-->
+                        <div class="single-exhibition-box-style3">
+                            <div class="img-holder">
+                                <div class="inner">
+                                    <img src="{{record.image.path}}" alt="{{record.title}}">
+                                    <div class="overlay-style-one bg1"></div>
+                                </div>
+                                <div class="text-box">
+                                    <span>{{record.bolimlar}}</span>
+                                    <h3><a href="{{record.slug}}">{{record.title}}</a></h3>
+                                    <p>{{record.created_at|date("d-M-Y")}}</p>    
+                                </div>
+                            </div>    
+                        </div>
+                        <!--End Single Exhibition Box Style3-->
+                    {% endif %}
+                    {% endfor %}                    
+                </div>                
             </div>
         </div>
     </div>    
