--- a/themes/art-fakult/layouts/asosiy-layout.htm
+++ b/themes/art-fakult/layouts/asosiy-layout.htm
@@ -35,9 +35,9 @@
     {% partial "section-fact-testimonial" %}
 <!--Start Fact Testimonial Area-->
 
-<!--Start Events Style2 Area-->
-    {% partial "section-vents-style2-area" %}
-<!--End Events Style2 Area-->
+<!--Start blog Style4 Area-->
+    {% partial "section-latest-blog-style4" %}
+<!--End blog Style4 Area-->
 
 <!--Start Art Area-->
     {% partial "section-art-area" %}
