--- a/themes/art-fakult/partials/section-art-area.htm
+++ b/themes/art-fakult/partials/section-art-area.htm
@@ -4,11 +4,11 @@
             <div class="col-xl-12">
                 <div class="top">
                     <div class="sec-title">
-                        <p>EXPLORE ART</p>
-                        <div class="big-title"><h1>From Our Collection</h1></div>
+                        <p>{{"Tasviriy san'at antalogiyasi"|_}}</p>
+                        <div class="big-title"><h1>{{"O‘zbekiston rassomlarining onlayn katalogi"|_}}</h1></div>
                     </div>
                     <div class="view-more-button">
-                        <a class="btn-one" href="index.html#">View More</a>
+                        <a class="btn-one" href="#">{{"Ko'rish"|_}}</a>
                     </div>
                 </div>
             </div>
