--- a/themes/art-fakult/partials/section-fact-testimonial.htm
+++ b/themes/art-fakult/partials/section-fact-testimonial.htm
@@ -31,7 +31,7 @@ pageNumber = "{{ :page }}"
                                     </h1>
                                 </div>
                                 <div class="title">
-                                    <h3>{{statistika.statistika_desc}}</h3>
+                                    <h3>{{statistika.statistika_desc|raw}}</h3>
                                 </div>
                             </li>
                         {% endfor %}                       
