--- a/themes/art-fakult/layouts/asosiy-layout.htm
+++ b/themes/art-fakult/layouts/asosiy-layout.htm
@@ -9,7 +9,7 @@
 <body>
 <div class="boxed_wrapper">
 
-<div class="preloader"></div> 
+{# <div class="preloader"></div>  #}
 
 <!-- start main-header style2-->
     {% partial "main-header" %}
