--- a/themes/art-fakult/partials/section-art-area.htm
+++ b/themes/art-fakult/partials/section-art-area.htm
@@ -1,3 +1,17 @@
+[builderList]
+modelClass = "RaxiDev\ArtKatalog\Models\Artwork"
+scope = "-"
+scopeValue = "{{ :scope }}"
+displayColumn = "title"
+noRecordsMessage = "No records found"
+detailsPage = "-"
+detailsUrlParameter = "id"
+recordsPerPage = 10
+pageNumber = "{{ :page }}"
+sortColumn = "created_at"
+sortDirection = "desc"
+==
+{% set records = builderList.records %}
 <section class="art-area">
     <div class="container">
         <div class="row">
@@ -16,161 +30,35 @@
     </div>
     <div class="container art-container">
         <div class="row masonary-layout">
+            {% for record in records %} 
+            {% if record.is_active %}
+          
             <!--Start Single Art Box-->
             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
                 <div class="single-art-box">
                     <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-1.jpg'|theme}}" alt="Awesome Image">
+                        <img src="{{record.image.path}}" alt="{{record.title}}">
                         <div class="overlay-content">
                             <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
+                                <h3><a href="#">{{ record.title }}</a></h3>
                             </div>
+                            
+                             <div class="readmore-button" style="bottom: 60px; margin: auto; width: 70%; left: -10px;">
+                                 <div class="image-box" style="margin-left: auto; margin-right: auto; display: block; width: 60px;">
+                                      <img style="margin-left: -66px; margin-bottom: 10px;" src="{{record.artists.avatar.path| resize(74,74, { mode:'crop', quality: '60' })}}" alt="Awesome Image">    
+                                 </div>
+                               <p style="color: #fff;">Rassom: <a href="#" style="color: #ffba00; margin: auto; width: 100px;">{{record.artists.fish|_}}</a></p>
+                            </div>    
                             <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
+                                <a href="#">{{"Ko'rish"|_}}</a>
                             </div>    
                         </div>
                     </div>    
                 </div>
             </div>
             <!--End Single Art Box-->
-            <!--Start Single Art Box-->
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="300ms" data-wow-duration="1500ms">
-                <div class="single-art-box">
-                    <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-2.jpg'|theme}}" alt="Awesome Image">
-                        <div class="overlay-content">
-                            <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
-                            </div>
-                            <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
-                            </div>    
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End Single Art Box-->
-            <!--Start Single Art Box-->
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="600ms" data-wow-duration="1500ms">
-                <div class="single-art-box">
-                    <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-3.jpg'|theme}}" alt="Awesome Image">
-                        <div class="overlay-content">
-                            <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
-                            </div>
-                            <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
-                            </div>    
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End Single Art Box-->
-            
-            <!--Start Single Art Box-->
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                <div class="single-art-box">
-                    <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-6.jpg'|theme}}" alt="Awesome Image">
-                        <div class="overlay-content">
-                            <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
-                            </div>
-                            <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
-                            </div>    
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End Single Art Box-->
-            <!--Start Single Art Box-->
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                <div class="single-art-box">
-                    <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-5.jpg'|theme}}" alt="Awesome Image">
-                        <div class="overlay-content">
-                            <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
-                            </div>
-                            <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
-                            </div>    
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End Single Art Box-->
-            <!--Start Single Art Box-->
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                <div class="single-art-box">
-                    <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-4.jpg'|theme}}" alt="Awesome Image">
-                        <div class="overlay-content">
-                            <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
-                            </div>
-                            <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
-                            </div>    
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End Single Art Box-->
-            
-            <!--Start Single Art Box-->
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                <div class="single-art-box">
-                    <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-7.jpg'|theme}}" alt="Awesome Image">
-                        <div class="overlay-content">
-                            <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
-                            </div>
-                            <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
-                            </div>    
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End Single Art Box-->
-            <!--Start Single Art Box-->
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                <div class="single-art-box">
-                    <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-8.jpg'|theme}}" alt="Awesome Image">
-                        <div class="overlay-content">
-                            <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
-                            </div>
-                            <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
-                            </div>    
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End Single Art Box-->
-            <!--Start Single Art Box-->
-            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                <div class="single-art-box">
-                    <div class="img-holder">
-                        <img src="{{'assets/images/art/art-v1-9.jpg'|theme}}" alt="Awesome Image">
-                        <div class="overlay-content">
-                            <div class="title"> 
-                                <h3><a href="index.html#">Exhibition of<br> Modern Art</a></h3>
-                            </div>
-                            <div class="readmore-button">
-                                <a href="index.html#">Read More</a>
-                            </div>    
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End Single Art Box-->
+            {% endif %}
+            {% endfor %}
         </div>
     </div>
 </section>
