--- a/themes/art-fakult/partials/section-latest-blog.htm
+++ b/themes/art-fakult/partials/section-latest-blog.htm
@@ -4,17 +4,18 @@
             <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12">
                 <div class="latest-blog-title">
                     <div class="sec-title">
-                        <p>OUR LATEST NEWS</p>
-                        <div class="big-title"><h1>Interviews and<br> Publications</h1></div>
+                        <p>{{"Ilmiy maqolalar"|_}}</p>
+                        <div class="big-title"><h1>Ilmiy Jurnal</h1></div>
                     </div>
                     <div class="text">
-                        <p>Your our Latest News interview and<br> Publication on your Update work. if you<br> want to this to you subcribe us now<br> and more detial</p>
-                        <a href="blog.html">More View</a>
+                        <p>{{"Ilmiy jurnal Google Scholar, Scientific Library of Uzbekistan, Cyberleninka, ResearchBib, Internet Archive kabi mahalliy va xalqaro bazalarda indekslangan."|_}}</p>
+                        <a href="#">Barcha to'plamlar ---></a>
                     </div>
                 </div>    
             </div>
             <div class="col-xl-8 col-lg-12 col-md-12 col-sm-12">
                 <div class="blog-carousel owl-carousel owl-theme owl-nav-style-one">
+
                     <!--Start single blog post-->
                     <div class="single-blog-post wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                         <div class="img-holder">
@@ -33,62 +34,9 @@
                         </div>
                     </div>
                     <!--End single blog post-->
-                    <!--Start single blog post-->
-                    <div class="single-blog-post wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
-                        <div class="img-holder">
-                            <img src="{{ 'assets/images/blog/latest-b-v1-2.jpg'|theme }}" alt="Awesome Image">
-                            <div class="overlay-style-one bg1"></div>
-                        </div>
-                        <div class="text-holder">
-                            <div class="post-date">
-                                <span>January 12, 2019</span>
-                            </div>
-                            <h3 class="blog-title"><a href="blog-single.html">Scenes from Stepan Hawkin’s World</a></h3>
-                            <div class="text">In a 1982 essay, Halley wrote that the idealist square becomes the prison made Geoetry is revealed as confinementIn other</div>
-                            <div class="button-box">
-                                <a href="blog-single.html">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End single blog post-->
-                    
-                    <!--Start single blog post-->
-                    <div class="single-blog-post wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
-                        <div class="img-holder">
-                            <img src="{{ 'assets/images/blog/latest-b-v1-1.jpg'|theme }}" alt="Awesome Image">
-                            <div class="overlay-style-one bg1"></div>
-                        </div>
-                        <div class="text-holder">
-                            <div class="post-date">
-                                <span>January 12, 2019</span>
-                            </div>
-                            <h3 class="blog-title"><a href="blog-single.html">Looking Forward: The Phasrasth and Kenyard</a></h3>
-                            <div class="text">Her tricky smile and timeless allure have inspired academic study & artistic emulation for more than five once and</div>
-                            <div class="button-box">
-                                <a href="blog-single.html">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End single blog post-->
-                    <!--Start single blog post-->
-                    <div class="single-blog-post wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
-                        <div class="img-holder">
-                            <img src="{{ 'assets/images/blog/latest-b-v1-2.jpg'|theme }}" alt="Awesome Image">
-                            <div class="overlay-style-one bg1"></div>
-                        </div>
-                        <div class="text-holder">
-                            <div class="post-date">
-                                <span>January 12, 2019</span>
-                            </div>
-                            <h3 class="blog-title"><a href="blog-single.html">Scenes from Stepan Hawkin’s World</a></h3>
-                            <div class="text">In a 1982 essay, Halley wrote that the idealist square becomes the prison made Geoetry is revealed as confinementIn other</div>
-                            <div class="button-box">
-                                <a href="blog-single.html">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End single blog post-->
-                </div>
+
+
+              </div>
             </div>
         </div>
     </div>
