SO'ngi o'zgarishlar

--- a/themes/art-fakult/layouts/asosiy-layout.htm
+++ b/themes/art-fakult/layouts/asosiy-layout.htm
@@ -39,6 +39,10 @@
     {% partial "section-latest-blog-style4" %}
 <!--End blog Style4 Area-->
 
+<!--Start Featured Area-->
+    {% partial "section-featured-area-library" %}
+<!--End Featured Area-->
+
 <!--Start Art Area-->
     {% partial "section-art-area" %}
 <!--End Art Area-->
