--- a/themes/art-fakult/partials/section-latest-blog-style4.htm
+++ b/themes/art-fakult/partials/section-latest-blog-style4.htm
@@ -13,7 +13,7 @@ sortDirection = "desc"
 ==
 {% set records = builderList.records %}
 <!--Start latest blog Style4 area -->
-<section class="latest-blog-style4-area">
+<section class="latest-blog-style4-area" style="padding: 120px 0 20px;">
     <div class="container">
         <div class="sec-title text-center">
             <p>{{"Kafedra tomonidan yaratilgan"|_}}</p>
