Yangi o'zgarishlar themani tog'irladim

--- a/themes/art-fakult/partials/footer-js.htm
+++ b/themes/art-fakult/partials/footer-js.htm
@@ -37,3 +37,6 @@
 
 <!-- thm custom script -->
 <script src="{{ 'assets/js/custom.js'|theme}}"></script>
+
+ <script src="{{ 'assets/js/zooming.min.js'|theme }}"></script>
+  <script src="{{ 'assets/js/main.js'|theme }}"></script>
